[package]
name = "dinotree_alg"
version = "0.4.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "Dinotree algorithms"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dinotree_alg"
keywords = ["tree", "kdtree","dinotree","space-partitioning"]
readme = "readme.md"
edition = "2018"


[workspace]
members = ["dinotree", "dinotree_alg_demo", "dinotree_alg_data"]

[dev-dependencies]
dists = "0.3"

[dependencies]
is_sorted = "0.1"
itertools = "0.8"
dinotree = {version = "0.5" , path= "dinotree"}
rayon = "1.2"
compt = "1.6"
axgeom = "1.2"

[features]
nbody = []
