[package]
name = "dinotree_alg"
version = "0.7.2"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "Dinotree algorithms"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dinotree_alg"
keywords = ["tree", "kdtree","dinotree","space-partitioning","no_std"]
readme = "README.md"
edition = "2018"


[workspace]
members = [ "dinotree_alg_demo"]

[dev-dependencies]
dists = "0.3"

[dependencies]
is_sorted = "0.1"
itertools = "0.8"
rayon = "1.2"
compt = "1.6"
axgeom = "1.4"
pdqselect = "0.1"


[features]
nbody = []
