[package]
name = "dinotree_alg_data"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"


[dependencies]
dinotree_alg = {path=".."}
dists={path="../../dists"}
gnuplot = "0.0.27"
duckduckgeo = {path="../../duckduckgeo"}
dinotree = {path="../../dinotree"}

#[profile.release]
#opt-level = 2
