[package]
name = "dinotree_alg_data"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
dists = "0.3"
gnuplot = "0.0.32"
duckduckgeo = "0.2"
rayon = "1.2"
axgeom = "1.2"
num_cpus = "1.11.1"
ordered-float = "1.0.2"
num-traits = "0.2.8"

[dependencies.dinotree_alg]
path = ".."
features = []

