[package]
name = "dists"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]



[dev-dependencies]
find_folder = "*"
rayon="1.0.2"
smallvec = "0.6.1"

compt = "1.2.2"
axgeom = "1.0.1"
dinotree = "0.1.0"
dinotree_geom={path="../../dinotree_geom"}
dinotree_alg = {path=".."}
new-ordered-float = "1.0.1"
rand = "0.3"
rustc-test = "0.3.0"
collision = "0.15.0"
cgmath = "0.16.0"
piston_window = "0.80.0"

